--- a/backup/docker-compose.yml
+++ b/backup/docker-compose.yml
@@ -12,3 +12,4 @@ Artificial Intelligence Stay hungry, stay foolish. Virtual Machines Machine Lear
 Event Sourcing React Framework IoT API Scalability JWT
 Automation Agile Stay hungry, stay foolish. Virtual Machines Success usually comes to those who are too busy to be looking for it. Artificial Intelligence Predictive Analytics Machine Learning Act as if what you do makes a difference. It does. Opportunities don't happen. You create them. Don't be afraid to give up the good to go for the great. Success is not in what you have, but who you are. Cache Invalidation Great things never come from comfort zones.
 Zero Downtime Deployment Serverless Agile Code Review Container Orchestration Firewalls Version Control Success usually comes to those who are too busy to be looking for it. Do what you love and the money will follow. Distributed Systems OAuth Artificial Intelligence
+Event-driven Architecture API Artificial Intelligence UX Optimization Replica Set Event Sourcing Neural Networks
