--- a/backup/env.config
+++ b/backup/env.config
@@ -7,3 +7,4 @@ Don't be afraid to give up the good to go for the great. Success usually comes t
 NLP IoT Cloud Functions DevOps Backend Database Distributed Systems Quantum Computing React Data Science Security Microservices
 Algorithm OAuth Performance Happiness is not something ready made. It comes from your own actions. JavaScript
 Frontend Version Control Big Data JavaScript Code Review Agile Quantum Computing Kubernetes
+Kubernetes API Gateway Framework Code Review Great things never come from comfort zones. Quantum Computing React DevOps Multi-threading
