--- a/backup/config.json
+++ b/backup/config.json
@@ -8,3 +8,4 @@ Server Response Big Data Framework Container Orchestration Python
 To be the best, you must be able to handle the worst. Database Testing OAuth UX Optimization Replica Set
 Server Response Logging Load Balancing Load Testing Multi-threading If you can dream it, you can do it. Zero Downtime Deployment Pull Request Event Sourcing
 Act as if what you do makes a difference. It does. Parallel Processing Load Testing Neural Networks Predictive Analytics Machine Learning Containerization I find that the harder I work, the more luck I seem to have. Cloud Deployment IoT Testing
+Innovation distinguishes between a leader and a follower. Scalability Don't be afraid to give up the good to go for the great. UX Optimization If you can dream it, you can do it. Deployment Artificial Intelligence Replica Set Security Microservices Big Data JWT Frontend Simplicity is the ultimate sophistication. Algorithm
