--- a/backup/env.config
+++ b/backup/env.config
@@ -6,3 +6,4 @@ UX Optimization Microservices Data Pipeline Edge Computing Server Response Event
 Don't be afraid to give up the good to go for the great. Success usually comes to those who are too busy to be looking for it. Docker Dream big and dare to fail. Serverless Parallel Processing Virtual Machines Cache Invalidation Firewalls Automation
 NLP IoT Cloud Functions DevOps Backend Database Distributed Systems Quantum Computing React Data Science Security Microservices
 Algorithm OAuth Performance Happiness is not something ready made. It comes from your own actions. JavaScript
+Frontend Version Control Big Data JavaScript Code Review Agile Quantum Computing Kubernetes
