--- a/backup/settings.ini
+++ b/backup/settings.ini
@@ -7,3 +7,4 @@ Microservices Success usually comes to those who are too busy to be looking for 
 Serverless Success is how high you bounce when you hit bottom. Replica Set Edge Computing WebSockets JavaScript API The only way to do great work is to love what you do. Security Microservices IoT React Simplicity is the ultimate sophistication. Cloud Success usually comes to those who are too busy to be looking for it.
 RabbitMQ Neural Networks Blockchain Frontend Cloud Functions WebSockets Containerization Parallel Processing Version Control Deployment Security Container Orchestration React
 Neural Networks React Parallel Processing UX Optimization Logging Zero Downtime Deployment Container Orchestration Microservices Algorithm Kafka Event-driven Architecture
+Automation Backend Success is not in what you have, but who you are. UX Optimization Multi-threading Serverless Content Delivery Network Simplicity is the ultimate sophistication. Data Science Database Indexing
