--- a/backup/config.json
+++ b/backup/config.json
@@ -7,3 +7,4 @@ Kafka Cloud Functions Success doesn’t just find you. You have to go out and get 
 Server Response Big Data Framework Container Orchestration Python
 To be the best, you must be able to handle the worst. Database Testing OAuth UX Optimization Replica Set
 Server Response Logging Load Balancing Load Testing Multi-threading If you can dream it, you can do it. Zero Downtime Deployment Pull Request Event Sourcing
+Act as if what you do makes a difference. It does. Parallel Processing Load Testing Neural Networks Predictive Analytics Machine Learning Containerization I find that the harder I work, the more luck I seem to have. Cloud Deployment IoT Testing
