--- a/backup/docker-compose.yml
+++ b/backup/docker-compose.yml
@@ -9,3 +9,4 @@ Cloud Functions Serverless API Success is how high you bounce when you hit botto
 Success doesn’t just find you. You have to go out and get it. Optimization Simplicity is the ultimate sophistication. Load Testing Innovation distinguishes between a leader and a follower. Event-driven Architecture RabbitMQ API Cloud Functions Docker Python Blockchain Kafka Scalability
 Docker Cache Invalidation Distributed Systems Latency Optimization Do what you love and the money will follow. Logging Monitoring Event-driven Architecture Neural Networks IoT Database Indexing React Server Response Quantum Computing Event Sourcing
 Artificial Intelligence Stay hungry, stay foolish. Virtual Machines Machine Learning Microservices Difficult roads often lead to beautiful destinations. Server Response Blockchain Success is how high you bounce when you hit bottom. NLP
+Event Sourcing React Framework IoT API Scalability JWT
