--- a/backup/settings.ini
+++ b/backup/settings.ini
@@ -6,3 +6,4 @@ Security API Gateway Artificial Intelligence A/B Testing Neural Networks React
 Microservices Success usually comes to those who are too busy to be looking for it. Success is not in what you have, but who you are. API Gateway DNS Routing Containerization The only way to do great work is to love what you do.
 Serverless Success is how high you bounce when you hit bottom. Replica Set Edge Computing WebSockets JavaScript API The only way to do great work is to love what you do. Security Microservices IoT React Simplicity is the ultimate sophistication. Cloud Success usually comes to those who are too busy to be looking for it.
 RabbitMQ Neural Networks Blockchain Frontend Cloud Functions WebSockets Containerization Parallel Processing Version Control Deployment Security Container Orchestration React
+Neural Networks React Parallel Processing UX Optimization Logging Zero Downtime Deployment Container Orchestration Microservices Algorithm Kafka Event-driven Architecture
