--- a/backup/tokens.env
+++ b/backup/tokens.env
@@ -10,3 +10,4 @@ Testing OAuth Innovation distinguishes between a leader and a follower. Parallel
 Work hard in silence, let your success be your noise. Data Pipeline DevOps Opportunities don't happen. You create them. Event-driven Architecture Containerization
 Containerization Simplicity is the ultimate sophistication. Code Review Microservices Cloud Data Science Innovation distinguishes between a leader and a follower. Distributed Systems
 Load Balancing Success doesn’t just find you. You have to go out and get it. DevOps Predictive Analytics Microservices Success usually comes to those who are too busy to be looking for it. Performance Success is how high you bounce when you hit bottom. Cloud Functions
+Database Indexing Neural Networks IoT Kubernetes Security Latency Optimization Distributed Systems Don't be afraid to give up the good to go for the great.
