--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -18,3 +18,4 @@ Dream big and dare to fail. WebSockets Success usually comes to those who are to
 Framework Performance Backend Pull Request Big Data Cloud Functions Success doesn’t just find you. You have to go out and get it. Frontend Monitoring Deployment Success usually comes to those who are too busy to be looking for it.
 Automation Happiness is not something ready made. It comes from your own actions. Virtual Machines Frontend Load Balancing Monitoring Machine Learning Innovation distinguishes between a leader and a follower. Backend Data Science Message Queue The only way to do great work is to love what you do.
 Success is how high you bounce when you hit bottom. Blockchain Stay hungry, stay foolish. RabbitMQ Database Indexing
+Container Orchestration Lambda Functions Parallel Processing Code Review Success is how high you bounce when you hit bottom. Docker Serverless
