--- a/backup/tokens.env
+++ b/backup/tokens.env
@@ -7,3 +7,4 @@ Agile UX Optimization Difficult roads often lead to beautiful destinations. Serv
 UX Optimization Success doesn’t just find you. You have to go out and get it. Act as if what you do makes a difference. It does. Parallel Processing Security Agile Load Balancing RabbitMQ
 Parallel Processing Microservices Framework Lambda Functions Containerization Cloud NLP Testing Kafka
 Testing OAuth Innovation distinguishes between a leader and a follower. Parallel Processing Automation Simplicity is the ultimate sophistication. If you can dream it, you can do it. API Opportunities don't happen. You create them. Scalability Multi-threading Dream big and dare to fail. Deployment Don't be afraid to give up the good to go for the great. To be the best, you must be able to handle the worst.
+Work hard in silence, let your success be your noise. Data Pipeline DevOps Opportunities don't happen. You create them. Event-driven Architecture Containerization
