--- a/backup/env.config
+++ b/backup/env.config
@@ -5,3 +5,4 @@ UX Optimization Monitoring Security Zero Downtime Deployment Cloud Functions
 UX Optimization Microservices Data Pipeline Edge Computing Server Response Event-driven Architecture Version Control Performance Cloud Functions Neural Networks Act as if what you do makes a difference. It does. Python Don't be afraid to give up the good to go for the great.
 Don't be afraid to give up the good to go for the great. Success usually comes to those who are too busy to be looking for it. Docker Dream big and dare to fail. Serverless Parallel Processing Virtual Machines Cache Invalidation Firewalls Automation
 NLP IoT Cloud Functions DevOps Backend Database Distributed Systems Quantum Computing React Data Science Security Microservices
+Algorithm OAuth Performance Happiness is not something ready made. It comes from your own actions. JavaScript
