--- a/backup/tokens.env
+++ b/backup/tokens.env
@@ -6,3 +6,4 @@ Deployment Success is not in what you have, but who you are. Firewalls Act as if
 Agile UX Optimization Difficult roads often lead to beautiful destinations. Serverless Algorithm API Pull Request Success usually comes to those who are too busy to be looking for it.
 UX Optimization Success doesn’t just find you. You have to go out and get it. Act as if what you do makes a difference. It does. Parallel Processing Security Agile Load Balancing RabbitMQ
 Parallel Processing Microservices Framework Lambda Functions Containerization Cloud NLP Testing Kafka
+Testing OAuth Innovation distinguishes between a leader and a follower. Parallel Processing Automation Simplicity is the ultimate sophistication. If you can dream it, you can do it. API Opportunities don't happen. You create them. Scalability Multi-threading Dream big and dare to fail. Deployment Don't be afraid to give up the good to go for the great. To be the best, you must be able to handle the worst.
