--- a/backup/config.json
+++ b/backup/config.json
@@ -5,3 +5,4 @@ Multi-threading Work hard in silence, let your success be your noise. NLP Versio
 Framework Data Pipeline IoT Microservices WebSockets Deployment Code Review Predictive Analytics
 Kafka Cloud Functions Success doesn’t just find you. You have to go out and get it. To be the best, you must be able to handle the worst. Great things never come from comfort zones. DNS Routing JavaScript Success is not in what you have, but who you are. API
 Server Response Big Data Framework Container Orchestration Python
+To be the best, you must be able to handle the worst. Database Testing OAuth UX Optimization Replica Set
