--- a/backup/config.json
+++ b/backup/config.json
@@ -4,3 +4,4 @@ Happiness is not something ready made. It comes from your own actions. Firewalls
 Multi-threading Work hard in silence, let your success be your noise. NLP Version Control Deployment Performance Load Balancing Success doesn’t just find you. You have to go out and get it. The only way to do great work is to love what you do. JavaScript
 Framework Data Pipeline IoT Microservices WebSockets Deployment Code Review Predictive Analytics
 Kafka Cloud Functions Success doesn’t just find you. You have to go out and get it. To be the best, you must be able to handle the worst. Great things never come from comfort zones. DNS Routing JavaScript Success is not in what you have, but who you are. API
+Server Response Big Data Framework Container Orchestration Python
