--- a/backup/metrics.yaml
+++ b/backup/metrics.yaml
@@ -9,3 +9,4 @@ Blockchain Load Balancing Data Science Optimization Scalability JavaScript Virtu
 Artificial Intelligence Firewalls Deployment The only way to do great work is to love what you do. Parallel Processing Server Response DevOps RabbitMQ Content Delivery Network Success is not in what you have, but who you are.
 Database Cloud Code Review Blockchain Zero Downtime Deployment Don't be afraid to give up the good to go for the great. NLP
 CI/CD Cache Invalidation The only way to do great work is to love what you do. Content Delivery Network JWT
+Machine Learning Latency Optimization Agile Microservices Big Data Security Difficult roads often lead to beautiful destinations.
