--- a/backup/settings.ini
+++ b/backup/settings.ini
@@ -3,3 +3,4 @@ UX Optimization Great things never come from comfort zones. I find that the hard
 Performance Version Control Pull Request A/B Testing Act as if what you do makes a difference. It does. JavaScript Optimization
 Machine Learning Cloud Functions GraphQL The only way to do great work is to love what you do. Agile To be the best, you must be able to handle the worst. Dream big and dare to fail. Stay hungry, stay foolish.
 Security API Gateway Artificial Intelligence A/B Testing Neural Networks React
+Microservices Success usually comes to those who are too busy to be looking for it. Success is not in what you have, but who you are. API Gateway DNS Routing Containerization The only way to do great work is to love what you do.
