--- a/backup/metrics.yaml
+++ b/backup/metrics.yaml
@@ -8,3 +8,4 @@ Difficult roads often lead to beautiful destinations. Logging Success is not in 
 Blockchain Load Balancing Data Science Optimization Scalability JavaScript Virtual Machines Success is how high you bounce when you hit bottom. NLP Act as if what you do makes a difference. It does. React DNS Routing Security Firewalls
 Artificial Intelligence Firewalls Deployment The only way to do great work is to love what you do. Parallel Processing Server Response DevOps RabbitMQ Content Delivery Network Success is not in what you have, but who you are.
 Database Cloud Code Review Blockchain Zero Downtime Deployment Don't be afraid to give up the good to go for the great. NLP
+CI/CD Cache Invalidation The only way to do great work is to love what you do. Content Delivery Network JWT
