--- a/backup/settings.ini
+++ b/backup/settings.ini
@@ -2,3 +2,4 @@ Cache Invalidation Parallel Processing RabbitMQ API Gateway Work hard in silence
 UX Optimization Great things never come from comfort zones. I find that the harder I work, the more luck I seem to have. CI/CD GraphQL A/B Testing Python Docker Kafka Testing Scalability
 Performance Version Control Pull Request A/B Testing Act as if what you do makes a difference. It does. JavaScript Optimization
 Machine Learning Cloud Functions GraphQL The only way to do great work is to love what you do. Agile To be the best, you must be able to handle the worst. Dream big and dare to fail. Stay hungry, stay foolish.
+Security API Gateway Artificial Intelligence A/B Testing Neural Networks React
