--- a/backup/tokens.env
+++ b/backup/tokens.env
@@ -3,3 +3,4 @@ Message Queue Predictive Analytics I find that the harder I work, the more luck 
 Simplicity is the ultimate sophistication. Firewalls Sharding Data Pipeline JWT Container Orchestration Parallel Processing React Do what you love and the money will follow. Big Data A/B Testing
 Agile Work hard in silence, let your success be your noise. Parallel Processing Replica Set Content Delivery Network Performance Cloud
 Deployment Success is not in what you have, but who you are. Firewalls Act as if what you do makes a difference. It does. Content Delivery Network RabbitMQ Stay hungry, stay foolish. Event-driven Architecture Framework
+Agile UX Optimization Difficult roads often lead to beautiful destinations. Serverless Algorithm API Pull Request Success usually comes to those who are too busy to be looking for it.
