--- a/backup/config.json
+++ b/backup/config.json
@@ -1,3 +1,4 @@
 JWT Innovation distinguishes between a leader and a follower. Scalability Data Science Database Indexing JavaScript Neural Networks React Sharding GraphQL Latency Optimization Stay hungry, stay foolish. Edge Computing Frontend
 Message Queue Microservices Data Pipeline Stay hungry, stay foolish. JWT Code Review
 Happiness is not something ready made. It comes from your own actions. Firewalls OAuth Backend Success is not in what you have, but who you are. Stay hungry, stay foolish.
+Multi-threading Work hard in silence, let your success be your noise. NLP Version Control Deployment Performance Load Balancing Success doesn’t just find you. You have to go out and get it. The only way to do great work is to love what you do. JavaScript
