--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -11,3 +11,4 @@ Work hard in silence, let your success be your noise. Big Data Agile Virtual Mac
 Load Testing Algorithm Happiness is not something ready made. It comes from your own actions. CI/CD Automation
 Serverless Kafka DNS Routing Load Balancing Success is how high you bounce when you hit bottom. Automation Innovation distinguishes between a leader and a follower. Big Data Blockchain Neural Networks
 Virtual Machines Latency Optimization Content Delivery Network Dream big and dare to fail. API Simplicity is the ultimate sophistication. I find that the harder I work, the more luck I seem to have. Serverless Blockchain
+Latency Optimization Sharding Performance Success is not in what you have, but who you are. JavaScript Success doesn’t just find you. You have to go out and get it. Act as if what you do makes a difference. It does. NLP Innovation distinguishes between a leader and a follower.
