--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -9,3 +9,4 @@ DevOps If you can dream it, you can do it. Optimization Kafka Message Queue Secu
 JavaScript Success is not in what you have, but who you are. Great things never come from comfort zones. Sharding Dream big and dare to fail. Logging Firewalls
 Work hard in silence, let your success be your noise. Big Data Agile Virtual Machines Performance Security To be the best, you must be able to handle the worst. Version Control Backend Multi-threading
 Load Testing Algorithm Happiness is not something ready made. It comes from your own actions. CI/CD Automation
+Serverless Kafka DNS Routing Load Balancing Success is how high you bounce when you hit bottom. Automation Innovation distinguishes between a leader and a follower. Big Data Blockchain Neural Networks
