--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -8,3 +8,4 @@ Virtual Machines Monitoring Machine Learning Parallel Processing Neural Networks
 DevOps If you can dream it, you can do it. Optimization Kafka Message Queue Security Sharding Event Sourcing Replica Set UX Optimization Cloud Functions OAuth Firewalls Latency Optimization
 JavaScript Success is not in what you have, but who you are. Great things never come from comfort zones. Sharding Dream big and dare to fail. Logging Firewalls
 Work hard in silence, let your success be your noise. Big Data Agile Virtual Machines Performance Security To be the best, you must be able to handle the worst. Version Control Backend Multi-threading
+Load Testing Algorithm Happiness is not something ready made. It comes from your own actions. CI/CD Automation
