--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -6,3 +6,4 @@ Event Sourcing Cloud Predictive Analytics Success is how high you bounce when yo
 DevOps Server Response CI/CD Dream big and dare to fail. Containerization Load Balancing Scalability
 Virtual Machines Monitoring Machine Learning Parallel Processing Neural Networks RabbitMQ Cloud Functions Algorithm Work hard in silence, let your success be your noise. Cache Invalidation Stay hungry, stay foolish. Firewalls Event Sourcing Message Queue
 DevOps If you can dream it, you can do it. Optimization Kafka Message Queue Security Sharding Event Sourcing Replica Set UX Optimization Cloud Functions OAuth Firewalls Latency Optimization
+JavaScript Success is not in what you have, but who you are. Great things never come from comfort zones. Sharding Dream big and dare to fail. Logging Firewalls
