--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -5,3 +5,4 @@ Event Sourcing Difficult roads often lead to beautiful destinations. UX Optimiza
 Event Sourcing Cloud Predictive Analytics Success is how high you bounce when you hit bottom. OAuth Framework Do what you love and the money will follow. Load Testing Deployment Containerization
 DevOps Server Response CI/CD Dream big and dare to fail. Containerization Load Balancing Scalability
 Virtual Machines Monitoring Machine Learning Parallel Processing Neural Networks RabbitMQ Cloud Functions Algorithm Work hard in silence, let your success be your noise. Cache Invalidation Stay hungry, stay foolish. Firewalls Event Sourcing Message Queue
+DevOps If you can dream it, you can do it. Optimization Kafka Message Queue Security Sharding Event Sourcing Replica Set UX Optimization Cloud Functions OAuth Firewalls Latency Optimization
