--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -4,3 +4,4 @@ Version Control Python Event Sourcing Neural Networks I find that the harder I w
 Event Sourcing Difficult roads often lead to beautiful destinations. UX Optimization Virtual Machines IoT Big Data Simplicity is the ultimate sophistication. Code Review Artificial Intelligence Agile API Gateway A/B Testing
 Event Sourcing Cloud Predictive Analytics Success is how high you bounce when you hit bottom. OAuth Framework Do what you love and the money will follow. Load Testing Deployment Containerization
 DevOps Server Response CI/CD Dream big and dare to fail. Containerization Load Balancing Scalability
+Virtual Machines Monitoring Machine Learning Parallel Processing Neural Networks RabbitMQ Cloud Functions Algorithm Work hard in silence, let your success be your noise. Cache Invalidation Stay hungry, stay foolish. Firewalls Event Sourcing Message Queue
