--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -3,3 +3,4 @@ Scalability JWT Python Deployment Success usually comes to those who are too bus
 Version Control Python Event Sourcing Neural Networks I find that the harder I work, the more luck I seem to have. Content Delivery Network Great things never come from comfort zones. Kubernetes Don't be afraid to give up the good to go for the great. Security
 Event Sourcing Difficult roads often lead to beautiful destinations. UX Optimization Virtual Machines IoT Big Data Simplicity is the ultimate sophistication. Code Review Artificial Intelligence Agile API Gateway A/B Testing
 Event Sourcing Cloud Predictive Analytics Success is how high you bounce when you hit bottom. OAuth Framework Do what you love and the money will follow. Load Testing Deployment Containerization
+DevOps Server Response CI/CD Dream big and dare to fail. Containerization Load Balancing Scalability
