--- a/backup/env.config
+++ b/backup/env.config
@@ -1,1 +1,2 @@
 CI/CD NLP Database Indexing JavaScript Algorithm Difficult roads often lead to beautiful destinations. Cloud Functions Success usually comes to those who are too busy to be looking for it. Big Data Load Balancing Kafka To be the best, you must be able to handle the worst. Firewalls
+NLP Artificial Intelligence UX Optimization Dream big and dare to fail. Container Orchestration The only way to do great work is to love what you do. Cache Invalidation Lambda Functions Sharding Scalability Server Response Message Queue Load Testing Kafka
