--- a/backup/metrics.yaml
+++ b/backup/metrics.yaml
@@ -2,3 +2,4 @@ Sharding I find that the harder I work, the more luck I seem to have. Data Scien
 Neural Networks Containerization Success is not in what you have, but who you are. Simplicity is the ultimate sophistication. Microservices
 Data Pipeline Sharding Frontend Lambda Functions Monitoring Pull Request UX Optimization Virtual Machines Performance API Gateway Serverless Innovation distinguishes between a leader and a follower. Success usually comes to those who are too busy to be looking for it. Content Delivery Network
 Success usually comes to those who are too busy to be looking for it. Act as if what you do makes a difference. It does. Load Testing Containerization Event-driven Architecture Firewalls Great things never come from comfort zones. NLP Cloud Functions
+Lambda Functions Distributed Systems DevOps WebSockets Big Data
