--- a/backup/tokens.env
+++ b/backup/tokens.env
@@ -1,1 +1,2 @@
 Simplicity is the ultimate sophistication. Cloud The only way to do great work is to love what you do. Event-driven Architecture Algorithm Data Pipeline Logging JavaScript Monitoring Frontend Parallel Processing
+Message Queue Predictive Analytics I find that the harder I work, the more luck I seem to have. Testing Edge Computing Scalability Act as if what you do makes a difference. It does. A/B Testing Distributed Systems Difficult roads often lead to beautiful destinations. API Machine Learning Deployment Frontend CI/CD
