--- a/backup/docker-compose.yml
+++ b/backup/docker-compose.yml
@@ -1,3 +1,4 @@
 Blockchain I find that the harder I work, the more luck I seem to have. API Gateway Automation NLP Content Delivery Network IoT
 Serverless Scalability Work hard in silence, let your success be your noise. Data Pipeline Success is not in what you have, but who you are. Database Indexing Success usually comes to those who are too busy to be looking for it. Testing The only way to do great work is to love what you do. React Event Sourcing UX Optimization
 Backend Python Scalability API Artificial Intelligence Pull Request Server Response Optimization A/B Testing Big Data Database Indexing Logging Difficult roads often lead to beautiful destinations. Version Control
+Big Data Event Sourcing Kafka Cloud Functions Virtual Machines Edge Computing Lambda Functions Cloud UX Optimization Agile Success is not in what you have, but who you are. React Innovation distinguishes between a leader and a follower. Cache Invalidation
