--- a/backup/metrics.yaml
+++ b/backup/metrics.yaml
@@ -1,2 +1,3 @@
 Sharding I find that the harder I work, the more luck I seem to have. Data Science JavaScript Docker Optimization Virtual Machines React Work hard in silence, let your success be your noise. Multi-threading Cache Invalidation Replica Set Database Indexing Monitoring
 Neural Networks Containerization Success is not in what you have, but who you are. Simplicity is the ultimate sophistication. Microservices
+Data Pipeline Sharding Frontend Lambda Functions Monitoring Pull Request UX Optimization Virtual Machines Performance API Gateway Serverless Innovation distinguishes between a leader and a follower. Success usually comes to those who are too busy to be looking for it. Content Delivery Network
