--- a/backup/docker-compose.yml
+++ b/backup/docker-compose.yml
@@ -1,1 +1,2 @@
 Blockchain I find that the harder I work, the more luck I seem to have. API Gateway Automation NLP Content Delivery Network IoT
+Serverless Scalability Work hard in silence, let your success be your noise. Data Pipeline Success is not in what you have, but who you are. Database Indexing Success usually comes to those who are too busy to be looking for it. Testing The only way to do great work is to love what you do. React Event Sourcing UX Optimization
