--- a/backup/config.json
+++ b/backup/config.json
@@ -1,1 +1,2 @@
 JWT Innovation distinguishes between a leader and a follower. Scalability Data Science Database Indexing JavaScript Neural Networks React Sharding GraphQL Latency Optimization Stay hungry, stay foolish. Edge Computing Frontend
+Message Queue Microservices Data Pipeline Stay hungry, stay foolish. JWT Code Review
