--- a/backup/permissions.conf
+++ b/backup/permissions.conf
@@ -1,1 +1,2 @@
 Replica Set Dream big and dare to fail. Quantum Computing Act as if what you do makes a difference. It does. Innovation distinguishes between a leader and a follower. OAuth Latency Optimization Multi-threading API Gateway Version Control Edge Computing
+Scalability JWT Python Deployment Success usually comes to those who are too busy to be looking for it. Database Indexing IoT Automation Pull Request DNS Routing Innovation distinguishes between a leader and a follower. Quantum Computing Zero Downtime Deployment
