--- a/backup/settings.ini
+++ b/backup/settings.ini
@@ -1,2 +1,3 @@
 Cache Invalidation Parallel Processing RabbitMQ API Gateway Work hard in silence, let your success be your noise. Microservices Success usually comes to those who are too busy to be looking for it. Blockchain Docker DevOps
 UX Optimization Great things never come from comfort zones. I find that the harder I work, the more luck I seem to have. CI/CD GraphQL A/B Testing Python Docker Kafka Testing Scalability
+Performance Version Control Pull Request A/B Testing Act as if what you do makes a difference. It does. JavaScript Optimization
